.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
22:09:06 **** Build of configuration Debug for project BoostBindExamples ****
make all 
Building file: ../src/BoostBindExamples.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/BoostBindExamples.d" -MT"src/BoostBindExamples.d" -o "src/BoostBindExamples.o" "../src/BoostBindExamples.cpp"
Finished building: ../src/BoostBindExamples.cpp
 
Building target: BoostBindExamples
Invoking: GCC C++ Linker
g++ -L/opt/boost/boost_1_57_0/stage/lib -o "BoostBindExamples"  ./src/BoostBindExamples.o   -lboost_system -lboost_thread
Finished building target: BoostBindExamples
 
22:10:13 **** Incremental Build of configuration Debug for project BoostBindExamples ****
make all 
Building file: ../src/BoostBindExamples.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/BoostBindExamples.d" -MT"src/BoostBindExamples.d" -o "src/BoostBindExamples.o" "../src/BoostBindExamples.cpp"
Finished building: ../src/BoostBindExamples.cpp
 
Building target: BoostBindExamples
Invoking: GCC C++ Linker
g++ -L/opt/boost/boost_1_57_0/stage/lib -o "BoostBindExamples"  ./src/BoostBindExamples.o   -lboost_system -lboost_thread
Finished building target: BoostBindExamples
 
22:10:56 **** Incremental Build of configuration Debug for project BoostBindExamples ****
make all 
Building file: ../src/BoostBindExamples.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/BoostBindExamples.d" -MT"src/BoostBindExamples.d" -o "src/BoostBindExamples.o" "../src/BoostBindExamples.cpp"
Finished building: ../src/BoostBindExamples.cpp
 
Building target: BoostBindExamples
Invoking: GCC C++ Linker
g++ -L/opt/boost/boost_1_57_0/stage/lib -o "BoostBindExamples"  ./src/BoostBindExamples.o   -lboost_system -lboost_thread
Finished building target: BoostBindExamples
 
22:11:23 **** Incremental Build of configuration Debug for project BoostBindExamples ****
make all 
Building file: ../src/BoostBindExamples.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/BoostBindExamples.d" -MT"src/BoostBindExamples.d" -o "src/BoostBindExamples.o" "../src/BoostBindExamples.cpp"
Finished building: ../src/BoostBindExamples.cpp
 
Building target: BoostBindExamples
Invoking: GCC C++ Linker
g++ -L/opt/boost/boost_1_57_0/stage/lib -o "BoostBindExamples"  ./src/BoostBindExamples.o   -lboost_system -lboost_thread
Finished building target: BoostBindExamples
 
22:13:49 **** Incremental Build of configuration Debug for project BoostBindExamples ****
make all 
Building file: ../src/BoostBindExamples.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/BoostBindExamples.d" -MT"src/BoostBindExamples.d" -o "src/BoostBindExamples.o" "../src/BoostBindExamples.cpp"
Finished building: ../src/BoostBindExamples.cpp
 
Building target: BoostBindExamples
Invoking: GCC C++ Linker
g++ -L/opt/boost/boost_1_57_0/stage/lib -o "BoostBindExamples"  ./src/BoostBindExamples.o   -lboost_system -lboost_thread
Finished building target: BoostBindExamples
 
22:26:15 **** Incremental Build of configuration Debug for project BoostBindExamples ****
make all 
Building file: ../src/BoostBindExamples.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/BoostBindExamples.d" -MT"src/BoostBindExamples.d" -o "src/BoostBindExamples.o" "../src/BoostBindExamples.cpp"
Finished building: ../src/BoostBindExamples.cpp
 
Building target: BoostBindExamples
Invoking: GCC C++ Linker
g++ -L/opt/boost/boost_1_57_0/stage/lib -o "BoostBindExamples"  ./src/BoostBindExamples.o   -lboost_system -lboost_thread
Finished building target: BoostBindExamples
 
03:56:12 **** Incremental Build of configuration Debug for project BoostBindExamples ****
make all 
Building file: ../src/BoostBindExamples.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/BoostBindExamples.d" -MT"src/BoostBindExamples.d" -o "src/BoostBindExamples.o" "../src/BoostBindExamples.cpp"
Finished building: ../src/BoostBindExamples.cpp
 
Building target: BoostBindExamples
Invoking: GCC C++ Linker
g++ -L/opt/boost/boost_1_57_0/stage/lib -o "BoostBindExamples"  ./src/BoostBindExamples.o   -lboost_system -lboost_thread
Finished building target: BoostBindExamples
 
03:59:53 **** Incremental Build of configuration Debug for project BoostBindExamples ****
make all 
make: Nothing to be done for `all'.
06:47:15 **** Incremental Build of configuration Debug for project BoostAppDevCookbookCh2 ****
make all 
Building file: ../src/BoostAppDevCookbookCh2.cpp
Invoking: GCC C++ Compiler
g++ -std=c++0x -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/BoostAppDevCookbookCh2.d" -MT"src/BoostAppDevCookbookCh2.d" -o "src/BoostAppDevCookbookCh2.o" "../src/BoostAppDevCookbookCh2.cpp"
../src/BoostAppDevCookbookCh2.cpp: In function ‘void boost_multiple_values_example()’:
../src/BoostAppDevCookbookCh2.cpp:458:25: warning: unused variable ‘str’ [-Wunused-variable]
     const std::string & str = boost::get<1>(almost_a_pair);
                         ^
../src/BoostAppDevCookbookCh2.cpp: In function ‘void cpp11_move_emulation_example()’:
../src/BoostAppDevCookbookCh2.cpp:327:14: error: ‘std::string person_info::name_’ is private
  std::string name_;
              ^
../src/BoostAppDevCookbookCh2.cpp:650:10: error: within this context
    vasya.name_ = "Vasya";
          ^
../src/BoostAppDevCookbookCh2.cpp:328:14: error: ‘std::string person_info::second_name_’ is private
  std::string second_name_;
              ^
../src/BoostAppDevCookbookCh2.cpp:651:10: error: within this context
    vasya.second_name_ = "Snow";
          ^
../src/BoostAppDevCookbookCh2.cpp:326:7: error: ‘bool person_info::is_male_’ is private
  bool is_male_;
       ^
../src/BoostAppDevCookbookCh2.cpp:652:10: error: within this context
    vasya.is_male_ = true;
          ^
make: *** [src/BoostAppDevCookbookCh2.o] Error 1
06:48:02 **** Incremental Build of configuration Debug for project BoostAppDevCookbookCh2 ****
make all 
Building file: ../src/BoostAppDevCookbookCh2.cpp
Invoking: GCC C++ Compiler
g++ -std=c++0x -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/BoostAppDevCookbookCh2.d" -MT"src/BoostAppDevCookbookCh2.d" -o "src/BoostAppDevCookbookCh2.o" "../src/BoostAppDevCookbookCh2.cpp"
../src/BoostAppDevCookbookCh2.cpp: In function ‘void boost_multiple_values_example()’:
../src/BoostAppDevCookbookCh2.cpp:458:25: warning: unused variable ‘str’ [-Wunused-variable]
     const std::string & str = boost::get<1>(almost_a_pair);
                         ^
Finished building: ../src/BoostAppDevCookbookCh2.cpp
 
Building target: BoostAppDevCookbookCh2
Invoking: GCC C++ Linker
g++ -pthread -L/opt/boost/boost_1_57_0/stage/lib -o "BoostAppDevCookbookCh2"  ./src/BoostAppDevCookbookCh2.o   -lboost_system -lboost_thread
Finished building target: BoostAppDevCookbookCh2
 
17:59:08 **** Incremental Build of configuration Debug for project BoostAppDevCookbookCh2 ****
make all 
Building file: ../src/BoostAppDevCookbookCh2.cpp
Invoking: GCC C++ Compiler
g++ -std=c++0x -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/BoostAppDevCookbookCh2.d" -MT"src/BoostAppDevCookbookCh2.d" -o "src/BoostAppDevCookbookCh2.o" "../src/BoostAppDevCookbookCh2.cpp"
../src/BoostAppDevCookbookCh2.cpp: In function ‘void boost_multiple_values_example()’:
../src/BoostAppDevCookbookCh2.cpp:458:25: warning: unused variable ‘str’ [-Wunused-variable]
     const std::string & str = boost::get<1>(almost_a_pair);
                         ^
Finished building: ../src/BoostAppDevCookbookCh2.cpp
 
Building target: BoostAppDevCookbookCh2
Invoking: GCC C++ Linker
g++ -pthread -L/opt/boost/boost_1_57_0/stage/lib -o "BoostAppDevCookbookCh2"  ./src/BoostAppDevCookbookCh2.o   -lboost_system -lboost_thread
Finished building target: BoostAppDevCookbookCh2
 
21:27:50 **** Incremental Build of configuration Debug for project BoostAppDevCookbookCh2 ****
make all 
Building file: ../src/BoostAppDevCookbookCh2.cpp
Invoking: GCC C++ Compiler
g++ -std=c++0x -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/BoostAppDevCookbookCh2.d" -MT"src/BoostAppDevCookbookCh2.d" -o "src/BoostAppDevCookbookCh2.o" "../src/BoostAppDevCookbookCh2.cpp"
../src/BoostAppDevCookbookCh2.cpp: In function ‘void boost_multiple_values_example()’:
../src/BoostAppDevCookbookCh2.cpp:458:25: warning: unused variable ‘str’ [-Wunused-variable]
     const std::string & str = boost::get<1>(almost_a_pair);
                         ^
Finished building: ../src/BoostAppDevCookbookCh2.cpp
 
Building target: BoostAppDevCookbookCh2
Invoking: GCC C++ Linker
g++ -pthread -L/opt/boost/boost_1_57_0/stage/lib -o "BoostAppDevCookbookCh2"  ./src/BoostAppDevCookbookCh2.o   -lboost_system -lboost_thread
Finished building target: BoostAppDevCookbookCh2
 
21:32:22 **** Incremental Build of configuration Debug for project BoostAppDevCookbookCh2 ****
make all 
Building file: ../src/BoostAppDevCookbookCh2.cpp
Invoking: GCC C++ Compiler
g++ -std=c++0x -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/BoostAppDevCookbookCh2.d" -MT"src/BoostAppDevCookbookCh2.d" -o "src/BoostAppDevCookbookCh2.o" "../src/BoostAppDevCookbookCh2.cpp"
../src/BoostAppDevCookbookCh2.cpp: In function ‘void boost_multiple_values_example()’:
../src/BoostAppDevCookbookCh2.cpp:468:25: warning: unused variable ‘str’ [-Wunused-variable]
     const std::string & str = boost::get<1>(almost_a_pair);
                         ^
Finished building: ../src/BoostAppDevCookbookCh2.cpp
 
Building target: BoostAppDevCookbookCh2
Invoking: GCC C++ Linker
g++ -pthread -L/opt/boost/boost_1_57_0/stage/lib -o "BoostAppDevCookbookCh2"  ./src/BoostAppDevCookbookCh2.o   -lboost_system -lboost_thread
Finished building target: BoostAppDevCookbookCh2
 
